--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint"    
   },
   "dependencies": {
     "axios": "^0.26.0",
     "core-js": "^3.6.5",
     "material-design-icons-iconfont": "^6.4.1",
-    "vue": "^3.0.0"
+    "openssl": "^2.0.0",
+    "vue": "^3.2.41"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
