--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,8 @@
     "rules": {
        "react/no-set-state": "off",
        "no-unused-vars": ["error", { "vars": "all", "args": "after-used", "ignoreRestSiblings": false }],
-       "require-yield": "off"
+       "require-yield": "off",
+       "no-useless-escape": "off"
     },
     "parserOptions": {
         "ecmaVersion": 6,
