--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"    
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "axios": "^0.26.0",
+    "cookielib": "^1.1.3",
     "core-js": "^3.6.5",
     "material-design-icons-iconfont": "^6.4.1",
     "openssl": "^2.0.0",
