--- a/package.json
+++ b/package.json
@@ -13,15 +13,16 @@
     "core-js": "^3.6.5",
     "material-design-icons-iconfont": "^6.4.1",
     "openssl": "^2.0.0",
-    "vue": "^3.2.41"
+    "vue": "^3.2.41",
+    "vue-route": "^1.5.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-plugin-babel": "^5.0.8",
+    "@vue/cli-plugin-eslint": "^5.0.8",
+    "@vue/cli-service": "^5.0.8",
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
+    "eslint": "^7.32.0",
     "eslint-plugin-vue": "^7.0.0"
   },
   "eslintConfig": {
