--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "material-design-icons-iconfont": "^6.4.1",
     "openssl": "^2.0.0",
     "vue": "^3.2.41",
-    "vue-route": "^1.5.1"
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^5.0.8",
