--- a/package.json
+++ b/package.json
@@ -37,7 +37,14 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {}
+    "rules": {
+      "react/no-set-state": "off",
+      "no-unused-vars": ["error", { "vars": "all", "args": "after-used", "ignoreRestSiblings": false }],
+      "require-yield": "off",
+      "no-useless-escape": "off",
+      "vue/valid-v-for": "off",
+      "vue/require-v-for-key": "off"
+    }
   },
   "browserslist": [
     "> 1%",
