--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "material-design-icons-iconfont": "^6.4.1",
     "openssl": "^2.0.0",
     "vue": "^3.2.41",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^5.0.8",
@@ -39,7 +40,14 @@
     },
     "rules": {
       "react/no-set-state": "off",
-      "no-unused-vars": ["error", { "vars": "all", "args": "after-used", "ignoreRestSiblings": false }],
+      "no-unused-vars": [
+        "error",
+        {
+          "vars": "all",
+          "args": "after-used",
+          "ignoreRestSiblings": false
+        }
+      ],
       "require-yield": "off",
       "no-useless-escape": "off",
       "vue/valid-v-for": "off",
