--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "axios": "^0.26.0",
     "cookielib": "^1.1.3",
     "core-js": "^3.6.5",
+    "laravel-echo": "^1.14.2",
     "material-design-icons-iconfont": "^6.4.1",
     "openssl": "^2.0.0",
+    "pusher-js": "^8.0.0",
+    "socket.io-client": "^4.5.4",
     "vue": "^3.2.41",
     "vue-router": "^4.1.6",
     "vuex": "^4.1.0"
