--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "pusher-js": "^8.0.1",
     "quasar": "^2.11.9",
     "socket.io-client": "^4.5.4",
+    "tsc": "^2.0.4",
     "vue": "^3.2.41",
     "vue-pusher": "^1.1.0",
     "vue-router": "^4.1.6",
