--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@quasar/extras": "^1.16.6",
     "axios": "^0.26.0",
     "cookielib": "^1.1.3",
     "core-js": "^3.6.5",
