--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "watch": "tsc -w"
   },
   "dependencies": {
+    "@phantasweng/vue-echo": "^0.2.1",
     "@quasar/extras": "^1.16.6",
-    "axios": "^0.26.0",
+    "axios": "^1.6.5",
     "core-js": "^3.6.5",
-    "laravel-echo": "^1.14.2",
+    "laravel-echo": "^1.15.3",
     "material-design-icons-iconfont": "^6.4.1",
     "openssl": "^2.0.0",
-    "pusher-js": "^8.0.1",
+    "pusher-js": "^8.3.0",
     "quasar": "^2.11.9",
     "socket.io-client": "^4.5.4",
     "tsc": "^2.0.4",
