--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,6 @@ VUE_APP_PUSHER_ID=
 VUE_APP_PUSHER_KEY=
 VUE_APP_PUSHER_APP_SECRET=
 VUE_APP_PUSHER_APP_CLUSTER=
+VUE_APP_WEBSOCKET_HOST=
+VUE_APP_WEBSOCKET_PORT=
+VUE_APP_BASE_URL=
