--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "watch": "npx tsc -w"
   },
   "dependencies": {
+    "@capacitor/android": "^6.0.0",
+    "@capacitor/core": "^6.0.0",
     "@quasar/extras": "^1.16.6",
     "axios": "^1.6.5",
     "core-js": "^3.6.5",
@@ -21,6 +23,7 @@
     "vuex": "^4.1.0"
   },
   "devDependencies": {
+    "@capacitor/cli": "^6.0.0",
     "@vue/cli-plugin-babel": "^5.0.8",
     "@vue/cli-plugin-eslint": "^5.0.8",
     "@vue/cli-service": "^5.0.8",
